Speech recognition and synthesis

--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
         <div>
             Level <span id="level">1</span>
         </div>
-        <div>
-            Time remaining
-        </div>
         <div id="clock"></div>
         <div id="blinds">
         </div>
@@ -31,8 +28,12 @@
         <button onclick="onPrevLevelPressed()">PREV</button>
         <button onclick="onNextLevelPressed()">NEXT</button>
     </div>
-    
+
+    <script src="src/sounds.js"></script>
+    <script src="src/consoleinterface.js"></script>
     <script src="src/model.js"></script>
+    <script src="src/ui.js"></script>
+
     <script src="src/index.js"></script>
 
 </body>
